--- a/~/.vscode-root/User/History/2c9d3a09/C9qn.yml
+++ b/~/.vscode-root/User/History/2c9d3a09/C9qn.yml
@@ -58,7 +58,7 @@
 - name: Copy .env file
   template: 
     src: ../templates/data.env.j2
-    dest: /home/admin/.env
+    dest: /home/admin/data.env
 
 - name: Run docker-compose
   command: docker-compose -f /home/admin/docker-compose.yml up -d
