--- a/~/.vscode-root/User/History/2c9d3a09/y9PR.yml
+++ b/~/.vscode-root/User/History/2c9d3a09/y9PR.yml
@@ -42,14 +42,9 @@
         name: "admin"
         group: "docker"
         append: yes
-    - name: Install docker-compose
-      get_url: 
-        url : https://github.com/docker/compose/releases/download/1.25.1-rc1/docker-compose-Linux-x86_64
-        dest: /usr/local/bin/docker-compose
-        mode: 'u+x,g+x'
-  tags:
-    - install
-
+tags:
+  - install
+  
 - name: Copy docker-compose.yml file
   template:
     src: ../templates/docker-compose.yml.j2
@@ -58,7 +53,7 @@
 - name: Copy .env file
   template: 
     src: ../templates/data.env.j2
-    dest: /home/admin/.env
+    dest: /home/admin/docker-compose.yml
 
 - name: Run docker-compose
-  command: docker-compose -f /home/admin/docker-compose.yml up -d
+  command: docker-compose -f /path/to/your/docker-compose.yml up -d
